--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
     "private": true,
     "scripts": {
         "build": "vite build",
-        "serve": "vite",
-        "start": "node --experimental-specifier-resolution=node server"
+        "dev": "vite",
+        "server": "node --experimental-specifier-resolution=node server"
     },
     "dependencies": {
         "@orbit/indexeddb": "0.17.0-beta.21",
